--- a/root/.gitconfig
+++ b/root/.gitconfig
@@ -3,3 +3,8 @@
 	name = TarieDume
 [user "user"]
 	email = tarienyamunda@gmail.com
+[github]
+	token = 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
+	user = TarieDume
+[guthub]
+	token = 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
